--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -14,7 +14,7 @@
   }
 
   body {
-    @apply text-sm overflow-x-hidden;
+    @apply text-xs overflow-x-hidden;
   }
 
   .dropdown {
@@ -30,7 +30,7 @@
   }
 
   body {
-    @apply text-darklink;
+    @apply text-xs text-darklink;
   }
 
   /*heading text color*/
@@ -280,7 +280,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply text-xs bg-background text-foreground;
   }
 }
 
